# ClientServerApp

./: CMakeLists.txt  README.md
client/: client  client.cpp  client.h  main.cpp
client/files/: Raven.txt
server/: main.cpp  server.cpp  server.h
server/files/: Raven.txt
shared/: logger.cpp  logger.h  pch.h
src/client/: Client.cpp  Client.h  client  main.cpp
src/server/: Server.cpp  Server.h  main.cpp  server
src/shared/: Connection.cpp  Connection.h  Serialize.h  pch.h
